fixed typewriter effect on mobile screen via js and html

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -90,9 +90,10 @@
 }
 
 .link-button {
-  padding: 2.5% 3%;
+  padding: 2.5% 1%;
   font-size: 1rem;
   margin: 5% auto;
+  width: 50%;
 }
 
 .main-image-div-mobile {
@@ -119,17 +120,20 @@
   width: 300px;
   transform: rotate(90deg);
   clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-  animation: spinSlow 5s ease-in-out infinite alternate forwards;
+  animation: spinSlow 1s ease-in-out infinite alternate forwards;
   filter: grayscale(80%);
   /* transform: rotate(90deg); */
 }
 
 @keyframes spinSlow {
   0% {
-    transform: rotate(87deg);
+    transform: rotate(90deg) translateX(0);
+  }
+  50% {
+    transform: rotate(90deg) translateX(5px);
   }
 
   100% {
-    transform: rotate(93deg);
+    transform: rotate(90deg) translateX(7px);
   }
 }
